# playground

./: .gitignore  byteorder.c  cache_test.c  cpucache.b.c  cpucache.c  env.c  fIzZbUzZ.c  forkbomb.c  forloop.c  iter.cpp  mallocbomb.c  quiz.ts  ref.cpp  squarefn.c  squarefn.py  strcmp.c  strlen.c  strptr.c  time.c  uninitializedmemory.c  utf8.c
bincode-vs-json/: Cargo.toml
bincode-vs-json/benches/: my_benchmark.rs
bincode-vs-json/src/: lib.rs
mbank_transactions/: Cargo.toml  settlements.json
mbank_transactions/src/: main.rs
scanstring/: go.mod  scanstring.go  scanstring_test.go
socialify-dos/: go.mod  main.go
test-parse-json/: Cargo.toml
test-parse-json/src/: main.rs
