[package]
name = "mbank_transactions"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scraper = "0.12.0"
dialoguer = "0.8.0"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
